# rust-esp32

./: .gitignore  LICENSE  README.md  hardware.md  setup_esp_rust.ps1  skills.md
tarot-esp32/: .gitignore  AUDIO_TECH_NOTES.md  CMakeLists.txt  README.md  generate_sounds.py  partitions.csv  prepare_assets.py  process_custom_sounds.py  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
tarot-esp32/DOCS/: RGB565_PIPELINE.md
tarot-esp32/components/tarot_core/: CMakeLists.txt  Cargo.toml  dummy.c
tarot-esp32/components/tarot_core/.cargo/: config.toml
tarot-esp32/components/tarot_core/src/: lib.rs
tarot-esp32/components/tarot_core/src/html/: index.html
tarot-esp32/main/: CMakeLists.txt  idf_component.yml  main.cc  st77916_init_cmds.h
tarot-esp32/main/ffi/: lcd_interface.h  rust_bridge.h
tarot-esp32/spiffs_data/: meanings_en.json  names.txt
