[package]
name = "tarot_core"
version = "0.7.0"
authors = ["Admin"]
description = "Tarot machine high-performance ritual engine component"
edition = "2021"

[lib]
name = "tarot_core"
# Compile as a static library for C++ CMake linking
crate-type = ["staticlib"]

[dependencies]
# ESP-IDF 系统服务 (WiFi, HTTP, Logging 等)
esp-idf-svc = { version = "0.50", default-features = false, features = ["critical-section", "std", "alloc", "experimental"] }
esp-idf-hal = { version = "0.45", default-features = false }
embedded-svc = "0.28"
anyhow = "1.0"
log = "0.4"
tjpgdec-rs = "0.4.0"
# 显式声明 esp-idf-sys，并禁用所有默认特性（特别是 binstart），防止生成多余 of app_main
esp-idf-sys = { version = "0.36", default-features = false, features = ["std", "native"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "from_env"
esp_idf_sdkconfig_defaults = ["sdkconfig.defaults"]

[profile.dev]
panic = "unwind" # std 下可以使用 unwind

[profile.release]
panic = "abort"
